--- a/layouts/partials/articles/hero.html
+++ b/layouts/partials/articles/hero.html
@@ -1,7 +1,9 @@
 <Section class="section" relative id="Articles__Hero">
-    <div class="subheading-container">
+    <br>
+    <div class="container">
         {{ partial "bio.html" . }}
     </div>
+    <br>
 </Section>
 
 {{ $script := resources.Get "js/toggleLayout.js" }}
