--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,7 +18,7 @@
         {{ partial "icons/ui/home.html" . }}
       </button>
 
-      <button id="homeButton" class="icon-wrapper" onclick=" window.open('http://kishnn.com','_blank')">
+      <button id="homeButton" class="icon-wrapper" onclick=" window.open('mailto:kisc106@gmail.com')">
         {{ partial "icons/social/mail.html" . }}
       </button>
     </div>
