--- a/layouts/partials/articles/hero.html
+++ b/layouts/partials/articles/hero.html
@@ -1,9 +1,6 @@
 <Section class="section" relative id="Articles__Hero">
-    <br>
-    <div class="container">
-        {{ partial "bio.html" . }}
+    <div class="heading-container" style="max-width: {{ .Page.Params.hero.maxWidthPX }}px;">
     </div>
-    <br>
 </Section>
 
 {{ $script := resources.Get "js/toggleLayout.js" }}
