--- a/layouts/partials/articles/hero.html
+++ b/layouts/partials/articles/hero.html
@@ -1,5 +1,7 @@
 <Section class="section" relative id="Articles__Hero">
-    <div class="heading-container" style="max-width: {{ .Page.Params.hero.maxWidthPX }}px;">
+    <div>
+        <p>Hi, I'm <a href="https://kishnn.com">Kishan</a>. I'm a research analyst. I write columns on sociopolitical and macroeconomic issues. I also freelance for B2B SaaS domain and on multiple platforms. Cheack out my entrepreneurial stint at <a href="htpps://kishnn.com">QUOLUMN</a>.
+        </p>
     </div>
 </Section>
 
