--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,6 +6,7 @@
     </a>
 
     <div class="nav-controls">
+
       <button id="copyButton" class="icon-wrapper">
         {{ partial "icons/ui/link.html" . }}
         <div id="toolTip" class="tool-tip " >
@@ -14,13 +15,16 @@
         <input id="copyText" style="opacity: 0;" type="text" class="tool-tip " />
       </button>
 
-      <button id="homeButton" class="icon-wrapper" onclick=" window.open('http://kishnn.com','_blank')">
-        {{ partial "icons/ui/home.html" . }}
-      </button>
-
       <button id="homeButton" class="icon-wrapper" onclick=" window.open('mailto:kisc106@gmail.com')">
         {{ partial "icons/social/mail.html" . }}
       </button>
+  
+        <button id="themeColorButton" class="icon-wrapper"> 
+          <div id="sunRays" class="sun-rays"></div>
+          <div id="moonOrSun" class="moon-or-sun"></div>
+          <div id="moonMask" class="moon-mask"></div>
+        </button>
+
     </div>
 </div>
 </Section>
